--- a/src/app/states/achievements/achievements.html
+++ b/src/app/states/achievements/achievements.html
@@ -1,58 +1,66 @@
 <material-content class="achievements"
                   ng-class="{'achievements--no-scroll': achievementsCtrl.achievements.hasActive()}">
+  <h3 class="material-display-1">Достижения</h3>
   <div class="achievements-active-background"
        ng-show="achievementsCtrl.achievements.hasActive()"></div>
   <div class="achievements-new-card">
-    <material-card>
-      <material-card-content>
-        <form>
-          <material-input-container>
-            <input required
-                   ng-model="achievementsCtrl.newAchievement.name">
-            <label>Название</label>
-          </material-input-container>
-          <material-input-container>
-            <textarea required
-                      ng-model="achievementsCtrl.newAchievement.description"></textarea>
-            <label>Описание</label>
-          </material-input-container>
-          <material-input-container>
-            <input type="number" min="0" step="1" required
-                   ng-model="achievementsCtrl.newAchievement.karma">
-            <label>Количество кармы</label>
-          </material-input-container>
-        </form>
-      </material-card-content>
-      <material-card-actions>
-        <material-button ng-click="achievementsCtrl.saveAchievement(achievementsCtrl.newAchievement)">
-          Сохранить
-        </material-button>
-        <material-button ng-click="achievementsCtrl.initNewAchievement()">
-          Закрыть
-        </material-button>
-      </material-card-actions>
+    <material-card ng-if="!achievementsCtrl.isCardAdding">
+      <material-card-title ng-click="achievementsCtrl.openAddingCard()"
+                           ng-class="{'clickable': !achievementsCtrl.isCardAdding}">
+        <material-card-title-text>
+          <span class="material-headline"><i class="material-icons">add</i>Новое достижение</span>
+        </material-card-title-text>
+      </material-card-title>
     </material-card>
+    <achievement-card ng-if="achievementsCtrl.isCardAdding"
+                      achievement="achievementsCtrl.newAchievement"
+                      save-achievement="achievementsCtrl.saveNewAchievement(achievement, $event)"
+                      close-achievement="achievementsCtrl.closeAddingCard()"></achievement-card>
   </div>
   <div class="achievements-cards">
-    <material-card
-      ng-repeat="achievement in achievementsCtrl.achievements.cards | orderBy:'obj.name' track by achievement.obj.id"
-      ng-class="{'active': achievementsCtrl.achievements.isActive(achievement)}"
-      ng-click="achievementsCtrl.achievements.toggle(achievement)">
-      <material-card-header>
+    <div class="achievements-card"
+         ng-repeat="achievement in achievementsCtrl.achievements.cards | orderBy:'obj.name' track by achievement.obj.id"
+         ng-switch="achievement.active">
+      <achievement-card
+        ng-switch-when="true"
+        active="true"
+        achievement="achievement.objCopy"
+        save-achievement="achievementsCtrl.saveAchievement(achievement, $event)"
+        close-achievement="achievement.closeEditingAchievement($event)"></achievement-card>
+      <material-card
+        ng-switch-default>
         <material-card-title>
           <material-card-title-text>
-            <span ng-bind="achievement.obj.name"></span>
+            <span class="material-headline" ng-bind="achievement.obj.name"></span>
+            <span class="material-subhead">Кол-во кармы: {{achievement.obj.karma}}</span>
           </material-card-title-text>
+          <material-card-title-media ng-if="achievement.obj.icon">
+            <div class="material-media-med">
+              <img src="data:image/png;base64,{{achievement.obj.icon}}" alt=""/>
+            </div>
+          </material-card-title-media>
         </material-card-title>
-      </material-card-header>
-      <material-card-content>
-        <p ng-bind="achievement.obj.description"></p>
-      </material-card-content>
-      <material-card-actions>
-        <material-button ng-click="achievementsCtrl.deleteAchievement(achievement, $event)">
-          <i class="material-icons">delete</i>
-        </material-button>
-      </material-card-actions>
-    </material-card>
+        <material-card-content>
+          <p ng-bind="achievement.obj.description"></p>
+        </material-card-content>
+        <material-card-actions>
+          <material-button class="material-icon-button"
+                           title="Редактировать достижение"
+                           ng-click="achievementsCtrl.goToAchievement(achievement)">
+            <i class="material-icons">info</i>
+          </material-button>
+          <material-button class="material-icon-button"
+                           title="Редактировать достижение"
+                           ng-click="achievementsCtrl.openAchievement(achievement)">
+            <i class="material-icons">edit</i>
+          </material-button>
+          <material-button class="material-icon-button"
+                           title="Удалить достижение"
+                           ng-click="achievementsCtrl.deleteAchievement(achievement, $event)">
+            <i class="material-icons">delete</i>
+          </material-button>
+        </material-card-actions>
+      </material-card>
+    </div>
   </div>
 </material-content>
