--- a/src/app/components/directive/toolbar/material-toolbar.scss
+++ b/src/app/components/directive/toolbar/material-toolbar.scss
@@ -9,6 +9,12 @@ material-toolbar {
   background: $color-indigo-normal;
   color: #FFFFFF;
 
+  h1, h2, h3 {
+    font-family: inherit;
+    font-weight: inherit;
+    font-size: inherit;
+  }
+
   &._material-toolbar-transitions {
     transition-duration: 0.5s;
     transition-timing-function: cubic-bezier(0.35, 0, 0.25, 1);
@@ -32,52 +38,39 @@ material-toolbar {
     max-height: $material-toolbar-height;
     padding: 0 16px;
     margin: 0;
-    h1, h2, h3 {
-      font-size: inherit;
-      font-weight: inherit;
-      margin: inherit;
-    }
+
     a {
       color: inherit;
       text-decoration: none;
     }
+
     .material-button {
       margin-top: 0;
       margin-bottom: 0;
       transition-duration: 0.5s;
       transition-timing-function: cubic-bezier(0.35, 0, 0.25, 1);
       transition-property: background-color, fill, color;
+
       &.material-icon-button material-icon {
         transition-duration: 0.5s;
         transition-timing-function: cubic-bezier(0.35, 0, 0.25, 1);
         transition-property: background-color, fill, color;
       }
+
       &.ng-animate, &.material-icon-button material-icon.ng-animate {
         transition: none;
       }
     }
-    > .material-button:first-child {
-      margin-left: -8px;
+
+    > .material-button {
+      &:first-child {
+        margin-left: -8px;
+      }
+
+      &:last-child {
+        margin-right: -8px;
+      }
     }
-    > .material-button:last-child {
-      margin-right: -8px;
-    }
-  }
-}
-
-[dir=rtl] .material-toolbar-tools > .material-button:first-child {
-  margin-left: auto;
-  margin-right: -8px;
-}
-
-[dir=rtl] .material-toolbar-tools > .material-button:last-child {
-  margin-right: auto;
-  margin-left: -8px;
-}
-
-@media screen and (-ms-high-contrast: active) {
-  .material-toolbar-tools {
-    border-bottom: 1px solid #fff;
   }
 }
 
