--- a/src/app/states/main/main.html
+++ b/src/app/states/main/main.html
@@ -1,19 +1,24 @@
 <material-toolbar>
   <div class="material-toolbar-tools">
-    <material-button class="material-icon-button" ng-click="isSidenavOpen = !isSidenavOpen">
+    <material-button class="material-icon-button"
+                     ng-click="isSidenavOpen = !isSidenavOpen">
       <i class="material-icons">menu</i>
     </material-button>
-
     <h2 class="flex">Achievement Board</h2>
   </div>
 </material-toolbar>
-<material-sidenav ng-init="isSidenavOpen = false" material-is-open="isSidenavOpen">
+<material-sidenav ng-init="isSidenavOpen = false"
+                  material-is-open="isSidenavOpen">
   <ul>
     <li>
-      <a material-button ui-sref=".users" ng-click="isSidenavOpen = false">Пользователи</a>
+      <a material-button
+         ui-sref=".users"
+         ng-click="isSidenavOpen = false">Пользователи</a>
     </li>
     <li>
-      <a material-button ui-sref=".achievements" ng-click="isSidenavOpen = false">Достижения</a>
+      <a material-button
+         ui-sref=".achievements"
+         ng-click="isSidenavOpen = false">Достижения</a>
     </li>
   </ul>
 </material-sidenav>
