--- a/src/app/states/achievements/achievements.scss
+++ b/src/app/states/achievements/achievements.scss
@@ -6,15 +6,42 @@
     width: 100%;
     height: 100%;
 
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 200;
+    z-index: 299;
 
     background: $color-grey-normal;
-    opacity: 0.7;
+    opacity: 0.1;
+
+    animation: $card-animation-duration opacity;
+    animation-timing-function: $swift-ease-in-timing-function;
+    animation-fill-mode: forwards;
+    &.ng-hide-add {
+      animation: $card-animation-duration opacity-reversed;
+      animation-timing-function: $swift-ease-in-timing-function;
+      animation-fill-mode: forwards;
+    }
+
+    @keyframes opacity {
+      from {
+        opacity: 0.1;
+      }
+      to {
+        opacity: 0.7;
+      }
+    }
+
+    @keyframes opacity-reversed {
+      from {
+        opacity: 0.7;
+      }
+      to {
+        opacity: 0;
+      }
+    }
   }
   &-new-card {
     display: flex;
