--- a/src/app/states/achievements/directive/achievementCard/achievementCard.template.html
+++ b/src/app/states/achievements/directive/achievementCard/achievementCard.template.html
@@ -5,7 +5,7 @@
     </material-card-title-text>
     <material-card-title-media ng-if="$ctrl.achievement.icon">
       <div class="material-media-lg">
-        <img src="data:image/png;base64,{{$ctrl.achievement.icon}}" alt=""/>
+        <img ng-src="data:image/png;base64,{{$ctrl.achievement.icon}}" alt=""/>
       </div>
     </material-card-title-media>
   </material-card-title>
