Spinner style fixes.

--- a/src/app/components/directive/loaderSpinner/loaderSpinner.scss
+++ b/src/app/components/directive/loaderSpinner/loaderSpinner.scss
@@ -42,6 +42,48 @@ loader-spinner {
           animation: round_loader 1.5s linear infinite;
         }
       }
+
+      &.full-screen-spinner_overlay {
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.2);
+        z-index: 99999;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        .loader,
+        .loader:after {
+          border-radius: 50%;
+          width: 10em;
+          height: 10em;
+        }
+
+        .loader {
+          margin: 60px auto;
+          font-size: 10px;
+          position: relative;
+          text-indent: -9999em;
+          border: 1.1em solid rgba(15, 58, 157, 0.2);
+          border-left-color: #0f3a9d;
+          transform: translateZ(0);
+          animation: load8 1.1s infinite linear;
+        }
+
+        @keyframes load8 {
+          0% {
+            -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+          }
+
+          100% {
+            -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+          }
+        }
+
+      }
     }
   }
 
